--- a/CrewTests/Info.plist
+++ b/CrewTests/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 - present, Crew. All rights reserved.</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 </dict>
